# polygonid-flutter-sdk

./: .gitguardian.yml  .gitignore  .pubignore  AUTH.md  CHANGELOG.md  FAQ.md  FETCH_CRED.md  IDEN3MESSAGE_PARSER.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  PROOF.md  README.md  analysis_options.yaml  build.yaml  codecov.yml  coverage.sh  privadoid-flutter-sdk  pubspec.yaml
.github/workflows/: autoclose_stale_issues.yml  polygonid_flutter_sdk.yml
android/: build.gradle  sdk.properties  settings.gradle
android/src/main/cpp/: CMakeLists.txt  rapidsnark_module.cpp  rapidsnark_module.h
assets/: authV2.wcd  circuit.wasm  credentialAtomicQueryMTPV2.wcd  credentialAtomicQuerySigV2.wcd  credentialAtomicQueryV3-beta.1.wcd  inputs.json  witness.wtns
coverage/: lcov.info
example/: .gitignore  Makefile  README.md  analysis_options.yaml  build.yaml  env  env.json  env.sample  pubspec.yaml
example/android/: build.gradle
example/integration_test/: app_real_data_test.dart  app_test.dart  app_test.mocks.dart  bjj_test.dart  circomlib_test.dart  libpolygonid_test.dart  polygonidcore_mocks.dart
example/ios/: Podfile
example/lib/: main.dart
example/test/: widget_test.dart
gomobile/core/: README.md
ios/: libpolygonid.h  polygonid_flutter_sdk.podspec  privadoid_flutter_sdk.podspec  privadoid_sdk.podspec
ios/Classes/: PolygonIdSdkPlugin.h  PolygonIdSdkPlugin.m  PrivadoidFlutterSdkPlugin.h  PrivadoidFlutterSdkPlugin.m  PrivadoidPlugin.h  PrivadoidPlugin.m  gmp.h  (+16 more)
lib/: addresses.dart  api.dart  constants.dart  corelib.dart  eddsa_babyjub.dart  http.dart  http_exceptions.dart  jwz_preparer.dart  jwz_prover.dart  jwz_token.dart  privadoid_flutter_sdk.dart  privadoid_sdk.dart  privadoid_wallet.dart
libs/: build_xcframeworks.sh
polygonid-flutter-wrapper/: .metadata  README.md  maven-publish.gradle  pubspec.yaml
rust/: Cargo.toml  Makefile  cbindgen.toml  rs-lib-android-build.sh
test/: jwz_mocks.dart  jwz_test.dart  privadoid_flutter_sdk_test.dart
(+1379 files in other folders)
